--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="En stilren, responsiv webbshop byggd med HTML, CSS och JavaScript." />
-  <title>Min Webbshop</title>
+  <title>OutfitInstitutet</title>
   <link rel="stylesheet" href="styles.css" />
   <script defer src="app.js"></script>
 </head>
@@ -18,7 +18,7 @@
   <header class="site-header">
     <a class="brand" href="#top" aria-label="Gå till startsidan">
       <span class="logo">🛍️</span>
-      <span class="brand-name">Min Webbshop</span>
+      <span class="brand-name">OutfitInstitutet</span>
     </a>
 
     <div class="header-actions">
