--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Header -->
   <header class="site-header">
     <a class="brand" href="#top" aria-label="Gå till startsidan">
-      <span class="logo">🛍️</span>
+      <span class="logo">🤍</span>
       <span class="brand-name">OutfitInstitutet</span>
     </a>
 
