--- a/index.html
+++ b/index.html
@@ -3,66 +3,55 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="En stilren, responsiv webbshop byggd med HTML, CSS och JavaScript." />
-  <title>OutfitInstitutet</title>
+  <title>Studio — Shop</title>
+  <meta name="description" content="Stilren webbshop i minimalistisk mode-stil." />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
   <script defer src="app.js"></script>
 </head>
 <body>
-  <!-- Announce bar -->
-  <div class="announce">
-    Fri frakt över 499 kr • Fria returer i 30 dagar
-  </div>
-
   <!-- Header -->
   <header class="site-header">
-    <a class="brand" href="#top" aria-label="Gå till startsidan">
-      <span class="logo">🤍</span>
-      <span class="brand-name">OutfitInstitutet</span>
+    <a class="brand" href="#top" aria-label="Startsida">
+      <span class="brand-name">STUDIO</span>
     </a>
-
+    <nav class="main-nav" aria-label="Huvudmeny">
+      <a href="#" class="nav-link">Nyheter</a>
+      <a href="#" class="nav-link">Dam</a>
+      <a href="#" class="nav-link">Herr</a>
+      <a href="#" class="nav-link">Accessoarer</a>
+    </nav>
     <div class="header-actions">
-      <label class="theme-toggle" title="Byt tema">
-        <input id="themeToggle" type="checkbox" aria-label="Ljust/darkt tema">
-        <span class="slider"></span>
-      </label>
-
+      <input id="searchInput" class="search" type="search" placeholder="Sök" aria-label="Sök produkter" />
       <button id="cartButton" class="cart-button" aria-expanded="false" aria-controls="cartDrawer">
         <span class="cart-count" id="cartCount">0</span>
-        <span>Varukorg</span>
+        Varukorg
       </button>
     </div>
   </header>
 
-  <!-- Hero -->
-  <section class="hero" id="top" aria-label="Introduktion">
-    <div class="hero-inner">
-      <h1>Stil som håller längre</h1>
-      <p>En kuraterad butik med tidlösa plagg och prylar. Handla tryggt, enkelt och snyggt – helt utan krångel.</p>
-      <a class="hero-cta" href="#produkterna">Upptäck nyheter</a>
+  <!-- Hero / kampanj -->
+  <section class="hero" id="top" aria-label="Kampanj">
+    <div class="hero-media">
+      <img src="https://images.unsplash.com/photo-1519741497674-611481863552?q=80&w=1600&auto=format&fit=crop" alt="Minimalistisk modekampanj" />
     </div>
-    <div class="hero-art" aria-hidden="true">
-      <div class="orb orb-a"></div>
-      <div class="orb orb-b"></div>
-      <div class="orb orb-c"></div>
+    <div class="hero-copy">
+      <h1>AW Capsule</h1>
+      <p>Skulpterade siluetter i neutrala toner – bygg din garderob för säsongen.</p>
+      <a class="btn primary" href="#produkterna">Handla kollektionen</a>
     </div>
   </section>
 
   <main class="container" id="produkterna">
-    <!-- Filter/Sort -->
-    <section class="controls" aria-label="Filtrera och sortera produkterna">
-      <div class="control">
-        <label class="visually-hidden" for="searchInput">Sök produkter</label>
-        <input id="searchInput" type="search" placeholder="🔎 Sök produkter..." autocomplete="off" />
-      </div>
-
-      <div class="control">
-        <label class="visually-hidden" for="categorySelect">Kategori</label>
+    <!-- Filterrad -->
+    <section class="controls" aria-label="Filter och sortering">
+      <label class="select">
+        <span class="label">Kategori</span>
         <select id="categorySelect"></select>
-      </div>
-
-      <div class="control">
-        <label class="visually-hidden" for="sortSelect">Sortera</label>
+      </label>
+      <label class="select">
+        <span class="label">Sortera</span>
         <select id="sortSelect">
           <option value="relevance">Relevans</option>
           <option value="price-asc">Pris: Lågt → Högt</option>
@@ -70,7 +59,7 @@
           <option value="name-asc">Namn: A → Ö</option>
           <option value="name-desc">Namn: Ö → A</option>
         </select>
-      </div>
+      </label>
     </section>
 
     <!-- Produktgrid -->
@@ -79,8 +68,8 @@
     </section>
   </main>
 
-  <!-- Toasts -->
-  <div id="toast" class="toast" role="status" aria-live="polite" hidden></div>
+  <!-- Toast -->
+  <div id="toast" class="toast" hidden></div>
 
   <!-- Cart Drawer -->
   <div id="cartOverlay" class="cart-overlay" hidden></div>
@@ -95,17 +84,18 @@
         <span>Delsumma</span>
         <strong id="cartSubtotal">0 kr</strong>
       </div>
-      <button id="checkoutButton" class="primary">Gå till kassan</button>
-      <button id="clearCartButton" class="secondary">Töm kundvagn</button>
+      <button id="checkoutButton" class="btn primary block">Gå till kassan</button>
+      <button id="clearCartButton" class="btn ghost block">Töm kundvagn</button>
     </div>
   </aside>
 
+  <!-- Footer -->
   <footer class="site-footer">
-    <p>© <span id="year"></span> Min Webbshop — demo utan backend.</p>
+    <p>© <span id="year"></span> Studio — Demo-shop utan backend.</p>
   </footer>
 
   <noscript>
-    <p>Den här sidan kräver JavaScript för att fungera. Aktivera JavaScript i din webbläsare.</p>
+    <p class="noscript">Den här sidan kräver JavaScript för att fungera.</p>
   </noscript>
 </body>
 </html>
