--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Studio Market — Stilren & Livfull</title>
+  <title>OutfitInstitutet — Stilren & Livfull</title>
   <link rel="stylesheet" href="styles.css" />
   <script defer src="app.js"></script>
 </head>
@@ -21,7 +21,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <!-- Header -->
   <header class="site-header">
-    <a class="brand" href="#top" aria-label="Gå till startsidan">STUDIO MARKET</a>
+    <a class="brand" href="#top" aria-label="Gå till startsidan">OutfitInstitutet</a>
     <nav class="nav">
       <button id="cartButton" class="cart-button" aria-expanded="false" aria-controls="cartDrawer">
         <span class="cart-count" id="cartCount">0</span> Varukorg
@@ -82,7 +82,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   <!-- Footer -->
   <footer class="site-footer" data-animate="fade-up">
-    © <span id="year"></span> Studio Market — demo utan backend.
+    © <span id="year"></span> OutfitInstitutet — demo utan backend.
   </footer>
 </body>
 </html>
